--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=8080
 
 spring.thymeleaf.cache=false
+
+logging.path=/root/logs/firevo/
+logging.level.root=INFO
+logging.level.com.firevo=DEBUG
