지도 api 연동 robots.txt 추가 static 리소스 분리

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.thymeleaf.cache=false
 logging.path=/root/logs/firevo/
 logging.level.root=INFO
 logging.level.com.firevo=DEBUG
+
+static.resource.location=classpath:/static/
