--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.thymeleaf.cache=false
 
 logging.path=/root/logs/firevo/
 logging.level.root=INFO
+logging.level.org.springframework=DEBUG
 logging.level.com.firevo=DEBUG
 
 static.resource.location=classpath:/static/
