DB 셋팅 및 mybatis 설정 완료. 기본 product_registration 테이블 및 entity 추가 / repository 개발

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -7,3 +7,5 @@ logging.level.root=INFO
 logging.level.com.firevo=DEBUG
 
 static.resource.location=classpath:/static/
+
+spring.profiles.include=database
