날짜 포맷 변경, 등록폼 flexing

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.thymeleaf.cache=false
 
 logging.path=/root/logs/firevo/
 logging.level.root=INFO
-logging.level.org.springframework=DEBUG
 logging.level.com.firevo=DEBUG
 
 static.resource.location=classpath:/static/
 
 spring.profiles.include=database
+spring.datasource.password=
